fix note enchantee delete align-items

--- a/css/styles.css
+++ b/css/styles.css
@@ -497,7 +497,6 @@ header i {
   .full__menu {
     display: flex;
     justify-content: space-around;
-    align-items: center;
   }
 }
 
